# falabella_poc_back

./: .env.example  .gitignore  MANUAL_USUARIO.tex  MODELO.md  MODELO.tex  PIPELINE.tex  README.md  agent_web.py  alembic.ini  app_config.py  auth.py  comment_simulator.py  comments.py  day_planning.py  day_state.py  db.py  driver_sim.py  drivers_whatsapp.py  empresa_contactos.py  events.py  legacy_routes.py  live_generator.py  main.py  mantenedores.py  masters.py  me.py  motivo_classifier.py  motivo_corrections.py  notifications.py  openapi.json  pipeline.py  plan_diario.py  preferences.py  priorities.py  pyproject.toml  qa_audit.py  qa_persistencia.py  requirements.txt  rutas.py  schemas.py  (+13 more)
.github/workflows/: main_poc-fal-back.yml
_legacy/: README.md  qa_persistencia.py  qa_whatsapp.py
_legacy/fpoc_loader/: apply_migration.py  (+6 more)
alembic/: env.py  script.py.mako
app/: __init__.py  main.py
core/: activation.py  app_config.py  auth.py  cache.py  db.py  events.py  schemas.py  state.py  storage.py  twilio_templates.py
docs/: ONBOARDING.md  REPO_TREE_BACKEND.md
fpoc_loader/: access_log_ddl.sql  apply_migration.py  bootstrap.py  bootstrap_azure_schema.py  content_templates_ddl.sql  ddl.sql  fix_vip_columns_azure.py  load_to_azure.py  migrate_activation_tokens.py  migrate_alert_dispatch.py  migrate_cap_validation.py  migrate_capacitaciones.py  migrate_client_day_notes.py  migrate_copiloto_decisions.py  migrate_day_config.py  migrate_day_state.py  migrate_day_state_r3.py  migrate_document_types.py  migrate_dotacion_diaria.py  migrate_driver_documents.py  migrate_driver_positions.py  migrate_driver_role.py  migrate_drivers_updated_at.py  migrate_drivers_whatsapp.py  migrate_empresa_central.py  migrate_empresa_contactos.py  migrate_empresa_contactos_rol_check.py  migrate_entity_documents.py  migrate_foreign_keys.py  migrate_motivo_corrections.py  migrate_sim_clock.py  migrate_simpli_columns.py  migrate_simpli_pascal_rename.py  migrate_split_multi_region_routes.py  migrate_sqlite_to_azure.py  migrate_vip_deadline.py  migrate_visit_interventions.py  migrations.py  notifications_ddl.sql  seed_history.py  (+5 more)
manual_assets/: 01_login.html  02_sidebar_overview.html  03_maestros_empresas.html  04_empresa_drawer.html  05_vip_form.html  06_motivos_catalogo.html  07_plan_diario.html  08_watchlist.html  09_mapa.html  10_asistente_ia.html  11_correcciones_motivo.html  12_driver_scorecard.html  13_kpis_historico.html  14_notif_log.html  15_reportar_motivo.html  16_whatsapp_chat.html  _base.css  _layout.js  render.mjs
ml/: masters.py  pipeline.py  synthetic_calibration.py
pitch_deck/: valuedata-falabella-alertas.html  valuedata-falabella-pitch.html
routers/: admin_day_notifications.py  admin_day_stats.py  admin_dispatch_v2.py  admin_interventions.py  admin_invitations.py  admin_pilot.py  agent_web.py  centros_distribucion.py  comments.py  copiloto.py  day_planning.py  day_state.py  debug_multirole.py  drivers_whatsapp.py  empresa_contactos.py  legacy_routes.py  mantenedores.py  mantenedores_capacitaciones.py  mantenedores_clients.py  mantenedores_doctypes.py  mantenedores_documents_driver.py  mantenedores_documents_entity.py  mantenedores_dotacion.py  mantenedores_drivers.py  mantenedores_empresas.py  mantenedores_shared.py  mantenedores_users.py  mantenedores_vehicles.py  me.py  motivo_classifier.py  motivo_corrections.py  notifications.py  operacion.py  plan_diario.py  preferences.py  priorities.py  rutas.py  search.py  seed_admin.py  seguimiento.py  (+5 more)
scripts/: cleanup_data_round7.py  cleanup_stale_en_curso.py  cleanup_synthetic_data.py  dump_openapi.py  enrich_simpli_visits.py  fix_punctuality_demo.py  load_motivos_descripciones.py  seed_centros_distribucion.py  seed_command_center_demo.py  seed_contactos_chile.py  seed_demo_hoy.py  seed_drivers_chile.py  seed_empresas_chile.py  seed_regions_demo.py  seed_vehicles_chile.py  smoke_wa_agent.py  truncate_visit_data.py
sims/: _visits_db.py  comment_simulator.py  driver_sim.py  eta_breach_cron.py  eta_preview_cron.py  live_generator.py  llm_agent.py  vip_deadline_cron.py  whatsapp_agent.py
tests/: conftest.py  test_auth_admin_required.py  test_copiloto_decisions.py  test_driver_sim_dedup.py  test_live_generator_order.py  test_smoke_endpoints.py  test_state_machine.py  test_whatsapp_escalation.py
tools/: README.md  build_onboarding_template.py  bulk_onboard.py  onboarding_template.xlsx
(+168 files in other folders)
